@@ -8,7 +8,11 @@
 _setupb:
 	mov	cx,ds
 	pop	dx
+#ifndef CONFIG_286PMODE
 	mov	ax,#DEF_INITSEG
+#else
+	mov	ax,#0x0048
+#endif
 	mov	ds,ax
 	pop	bx
 	sub	sp,*2
